FIX: Eliminate helptext element overflow for long strings of text by adding word wrapping and word breaks to css [t30239]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@18770 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -772,7 +772,7 @@ div.autocomplete ul li {
 
 #overlay{position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px;}
 
-.FormHelp{margin: 0 0 10px 310px;padding: 0;}
+.FormHelp{margin: 0 0 10px 310px;padding: 0; word-wrap:break-word;}
 .FormHelpInner{width:408px;padding:5px;margin:10px 0 0 0;}
 
 #ThemeBox {padding:0;margin:0;text-align:left;width: 170px;}
